# VolumeMixer

./: .gitignore  LICENSE  README.md
code/: code.md
code/device/: .cproject  .mxproject  .project  Debug.launch  Run.launch  device.ioc  device.launch
code/device/Core/Inc/: main.h  stm32f3xx_hal_conf.h
code/device/VolumeMixer/: .project  STM32F301C8TX_FLASH.ld  VolumeMixer.ioc
code/device/doc/: commands.md  eeprom.md  screen.md
code/device/src/: main.cpp
code/device_nucleo/: .cproject  .mxproject  .project  device_nucleo.ioc  device_nucleo.launch
code/hal/: .cproject  .mxproject  .project  STM32F302C8TX_FLASH.ld  VolumeMixer.launch  hal (1).launch  hal.ioc
code/hal_test/: .cproject  .project  hal_test.ioc  hal_test.launch
code/host/: .cproject  .project  CREDITS.md  Makefile  volume_math.m
code/host/builder/: README.md  pyproject.toml
code/host/builder/builder/: main.py
code/host/builder/icons/: icons.md
code/host/builder/icons_raw/: attr.toml
code/host/host/: icon_creator.py  pyproject.toml
code/host/host/config/: linux.toml  win.toml
code/host/host/host/: main.py
code/host/host/host/audio/: __init__.py  audio.py  classes.py  utils.py
code/host/host/host/dev/: __init__.py  commands.py  device.py  utils.py
code/host/src/: host.cpp
docs/software/: eeprom.md  screen.md  statemachine.md
pcb/rev1/: fp-lib-table  sym-lib-table  untitled.kicad_sch  volume-mixer.kicad_dru  volume-mixer.kicad_pcb  volume-mixer.kicad_pro  volume-mixer.kicad_sch
pcb/sensor pcb/: sensor pcb.kicad_pcb  sensor pcb.kicad_pro  sensor pcb.kicad_sch
(+75 files in other folders)
